fixed some minumum widths not performing correctly on mobile

--- a/components/home/home.css
+++ b/components/home/home.css
@@ -6,6 +6,7 @@
     font-style: normal;
     background-color: rgb(255,255,255);
     padding: 2rem;
+    min-width: none;
 }
 
 .content {
@@ -14,6 +15,7 @@
     grid-template-rows: 1fr;
     grid-template-areas:
     'bio . img';
+    min-width: none;
 }
 
 .bio {
@@ -22,15 +24,20 @@
 
 .profile-img {
     grid-area: img;
-    max-width: 300px;
+    max-width: 375px;
     place-self: center;
     border: 2px solid black;
     margin-top: 2em;
+    min-width: none;
 }
 
 @media only screen and (max-width: 900px) {
     .content {
         display: flex;
         flex-direction: column;
+    }
+
+    .profile-img {
+        max-width: 100%;
     }
 }
